--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,30 @@
-.App {
-  text-align: center;
+body {
+  background-color: #000;
+  color: #fff;
+}
+.remove {
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content__block {
+  padding: 2%;
+  margin: 0 auto;
+}
+.city__name {
+  font-size: 3rem;
+}
+.weather__temp {
+  font-size: 2rem;
+}
+svg:hover {
+  fill: white;
+  opacity: 0.8;
+}
+svg{
+  fill: red;
+}
+.weather__extra-info p {
+  font-size: 1.5rem
 }
 
 @media (prefers-reduced-motion: no-preference) {
