--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ body {
   background-color: #000;
   color: #fff;
 }
+.title__wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 2.5vw;
+}
 .remove {
   display: none;
 }
@@ -16,17 +21,12 @@ body {
 .weather__temp {
   font-size: 2rem;
 }
-svg:hover {
-  fill: white;
+.weather__icon:hover {
   opacity: 0.8;
-}
-svg{
-  fill: red;
 }
 .weather__extra-info p {
   font-size: 1.5rem
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
